# crippy

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  build_info.txt  crippy.py  crippy.ui  crippy_app.py  crippy_rc.py  crippy_ui.py  dev-requirements.txt  makefile  mk_file_version_info.py  myplaintextedit.py  pyproject.toml  requirements.txt  setup.iss  test_crippy_app.py  usersettings.py  version.iss
.github/workflows/: release.yml
